--- a/templates/layout.html
+++ b/templates/layout.html
@@ -13,7 +13,7 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
   </head>
-  <body>
+  <body style="background-color:lightblue;">
 
     {% include 'includes/_navbar.html' %}
     <div class="container">
