--- a/templates/menu.html
+++ b/templates/menu.html
@@ -2,19 +2,23 @@
 
 {% block body %}
 
-<h1>MENU</h1>
+<h1 align="center" style="color:midnightblue">Jarvis</h1>
 
-<h3>BIENVENIDO {{session.username}}</h3>
+<h3 align="center">BIENVENIDO {{session.username}}</h3>
 
-<div class="container">
+<div class="container" align="center">
+  <br><br>
     <div class="row">
-      <div class="col-sm">
+      <!--<div class="col-sm">
         <a href="/posts" class="btn btn-outline-primary">Posts</a>
       </div>
+      <br>
+      <br>-->
       <div class="col-sm">
+          <a href="/posts" class="btn btn-primary btn-lg">Posts</a>
+
         <a href="/comments" class="btn btn-primary btn-lg">Comments</a>
-      </div>
-      <div class="col-sm">
+      
         <a href="/score" class="btn btn-primary btn-lg">Analyze</a>
       </div>
     </div>
