--- a/templates/menu.html
+++ b/templates/menu.html
@@ -2,10 +2,10 @@
 
 {% block body %}
 
-<h1 align="center" style="color:midnightblue">Jarvis</h1>
-
-<h3 align="center">BIENVENIDO {{session.username}}</h3>
-
+<font color = "white">
+<h1 align="center">ACTUALIZA</h1>
+<h3 align="center">Bienvenido {{session.username}}</h3>
+</font>
 <div class="container" align="center">
   <br><br>
     <div class="row">
