--- a/templates/login.html
+++ b/templates/login.html
@@ -1,17 +1,42 @@
-{% extends 'layout.html' %}
+<!DOCTYPE html>
+<html>
+<head>
 
-{% block body %}
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+<style>
+.center-screen {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  min-height: 100vh;
+}
+</style>
+</head>
+<body background="/static/images/blue.jpg">
 
+<div class="center-screen">
+<font color = "white">
 <h1>Login</h1>
+</font>
 <form action="" method="POST">
     <div class="form-group">
+        <font color = "white">
         <label>Username</label>
+        </font>
         <input type="text" name="username" class="form-control" value={{request.form.username}}>
     </div>
     <div class="form-group">
+        <font color = "white">
         <label>Password</label>
+        </font>
         <input type="password" name="password" class="form-control" value={{request.form.password}}>
     </div>
     <button type="submit" class="btn btn-primary">Submit</button>
 </form>
-{% endblock %}
+</div>
+</body>
+</html>
