--- a/templates/menu.html
+++ b/templates/menu.html
@@ -15,11 +15,11 @@
       <br>
       <br>-->
       <div class="col-sm">
-          <a href="/posts" class="btn btn-primary btn-lg">Posts</a>
+          <a href="/posts" class="btn btn-lg btn-default">Posts</a>
 
-        <a href="/comments" class="btn btn-primary btn-lg">Comments</a>
+        <a href="/comments" class="btn btn-lg btn-default">Comments</a>
       
-        <a href="/score" class="btn btn-primary btn-lg">Analyze</a>
+        <a href="/score" class="btn btn-lg btn-default">Analyze</a>
       </div>
     </div>
   </div>
