--- a/templates/includes/_navbar.html
+++ b/templates/includes/_navbar.html
@@ -1,13 +1,13 @@
   <nav>
     <ul>
       <li>
-        <a href="/menu">Actualiza</a>
+        <a href="/submenu">Actualiza</a>
       </li>
       <li>
         <a href="#">Descubre</a>
       </li>
       <li>
-        <a href="#">Analiza</a>
+        <a href="/graph">Dashboard</a>
       </li>
     </ul>
   </nav>
