--- a/templates/dash.html
+++ b/templates/dash.html
@@ -105,9 +105,9 @@
          
         </script>
  </div>
- <!--
+ 
  <div class="col-xs-6">
-        <h1>Sentimiento Por Mes</h1><!-- bar chart canvas element
+        <h1>Sentimiento Por Mes</h1> bar chart canvas element
         <canvas id="barchart" width="600" height="400"></canvas>
         <script>
            // bar chart data
@@ -149,7 +149,10 @@
          
         </script>
  </div>
--->
+
+
+
+
 </div>
 
 <br><br><br>
