--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -66,7 +66,25 @@
           <span class="mdl-layout-title">Dashboard</span>
           <div class="mdl-layout-spacer"></div>
           <!--Actualizar-->
-          <a class="button" href="/graph"><i class="material-icons">autorenew</i></a>
+          <a id="demo-show-toast" class="button" href="/update"><i class="material-icons">autorenew</i>
+          </a>
+          <div id="demo-toast-example" class="mdl-js-snackbar mdl-snackbar">
+              <div class="mdl-snackbar__text" align="center"></div>
+              <button class="mdl-snackbar__action" type="button"></button>
+            </div>
+            <script>
+            (function() {
+              'use strict';
+              window['counter'] = 0;
+              var snackbarContainer = document.querySelector('#demo-toast-example');
+              var showToastButton = document.querySelector('#demo-show-toast');
+              showToastButton.addEventListener('click', function() {
+                'use strict';
+                var data = {message: 'We are updating your Dashboard...'};
+                snackbarContainer.MaterialSnackbar.showSnackbar(data);
+              });
+            }());
+            </script>
           <!--Actualizar-->
         </div>
       </header>
@@ -90,9 +108,9 @@
         <!--usuarios-->
         <!--Items de Menu Lateral-->
         <nav class="demo-navigation mdl-navigation mdl-color--blue-grey-800">
-          <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">people</i>Dashboard</a>
+          <a class="mdl-navigation__link" href="/update"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">people</i>Dashboard</a>
           <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">flag</i>Discover</a>
-          <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">forum</i>Comments</a>
+          <a class="mdl-navigation__link" href="/comments"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">forum</i>Comments</a>
           <div class="mdl-layout-spacer"></div>
           <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">help_outline</i><span class="visuallyhidden">Help</span></a>
         </nav>
@@ -106,7 +124,7 @@
           <div class="demo-charts mdl-color--white mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-grid">
             <svg fill="currentColor" width="200px" height="200px" viewBox="0 0 1 1" class="demo-chart mdl-cell mdl-cell--3-col mdl-cell--3-col-desktop">
               <use xlink:href="#piechart" mask="url(#piemask)" />
-              <text x="0.5" y="0.5" font-family="Roboto" font-size="0.3" fill="#888" text-anchor="middle" dy="0.1">60<tspan font-size="0.2" dy="-0.07">%</tspan></text>
+              <text x="0.5" y="0.5" font-family="Roboto" font-size="0.2" fill="#888" text-anchor="middle" dy="0.1">{{mtdsentiment}}<tspan font-size="0.2" dy="-0.07">%</tspan></text>
             </svg>
             <h3>Sentiment MTD</h3>
             <svg fill="currentColor" width="200px" height="200px" viewBox="0 0 1 1" class="demo-chart mdl-cell mdl-cell--3-col mdl-cell--3-col-desktop">
@@ -123,7 +141,7 @@
           <div class="demo-graphs mdl-shadow--2dp mdl-color--white mdl-cell mdl-cell--8-col">
           <div>
           <h3 align="center">Monthly Sentiment</h3>
-            <canvas id="chart" width="100%" height="50%"></canvas> 
+            <canvas id="chart"  width="600" height="400"></canvas> 
               <script>
               
                 // bar chart data
@@ -171,7 +189,7 @@
                       scaleShowGridLines : true,
                       barShowStroke : true,
                       scaleShowLabels: true,
-                      bezierCurve: false,
+                      bezierCurve: true,
                       
               
                 });
