--- a/templates/table.html
+++ b/templates/table.html
@@ -56,7 +56,6 @@
     </style>
     <style>
       .hpadding {padding: 20px 20px 20px 20px;} 
-      
     </style>
   </head>
   <body>
@@ -64,8 +63,11 @@
       <!--Header-->
       <header class="demo-header mdl-layout__header mdl-color--grey-100 mdl-color-text--grey-600">
         <div class="mdl-layout__header-row">
-          <span class="mdl-layout-title"></span>
+          <span class="mdl-layout-title">Comments</span>
           <div class="mdl-layout-spacer"></div>
+          <!--Actualizar-->
+          <a class="button" href="/graph"><i class="material-icons">autorenew</i></a>
+          <!--Actualizar-->
         </div>
       </header>
       <!--Menu Lateral-->
@@ -74,24 +76,43 @@
         <header class="demo-drawer-header">
           <img src="/static/images/user.jpg" class="demo-avatar">
           <div class="demo-avatar-dropdown">
-            <span>Please Login</span>
+            <span>{{session.username}}</span>
             <div class="mdl-layout-spacer"></div>
+            <button id="accbtn" class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--icon">
+              <i class="material-icons" role="presentation">arrow_drop_down</i>
+              <span class="visuallyhidden">Accounts</span>
+            </button>
+            <ul class="mdl-menu mdl-menu--bottom-right mdl-js-menu mdl-js-ripple-effect" for="accbtn">
+              <li class="mdl-menu__item"><i class="material-icons">clear</i>Sign out...</li>
+            </ul>
           </div>
         </header>
         <!--usuarios-->
         <!--Items de Menu Lateral-->
-        
+        <nav class="demo-navigation mdl-navigation mdl-color--blue-grey-800">
+          <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">people</i>Dashboard</a>
+          <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">flag</i>Discover</a>
+          <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">forum</i>Comments</a>
+          <div class="mdl-layout-spacer"></div>
+          <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">help_outline</i><span class="visuallyhidden">Help</span></a>
+        </nav>
         <!--Items de Menu Lateral-->
       </div>
       <!--Menu Lateral-->
       <!--Contenedor Central-->
       <main class="mdl-layout__content mdl-color--grey-100">
-        
-          
-        
-            
+        <div class="mdl-grid demo-content">
 
+
+
+
+
+          
+        </div>
       </main>
+      <!--Contenedor Central-->
+    </div>
+      
     <script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
   </body>
 </html>
